<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_sign_dialog_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/text_login"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nameGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/editTextBackground1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_edit_text_background"
                android:src="@drawable/shape_login_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/text_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/mainEditColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/editTextBackground1"
                app:layout_constraintEnd_toEndOf="@+id/editTextBackground1"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/editTextBackground1"
                app:layout_constraintTop_toTopOf="@+id/editTextBackground1"
                tools:ignore="LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/editTextBackground2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_edit_text_background"
                android:src="@drawable/shape_login_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/mainEditColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/editTextBackground2"
                app:layout_constraintEnd_toEndOf="@+id/editTextBackground2"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/editTextBackground2"
                app:layout_constraintTop_toTopOf="@+id/editTextBackground2"
                tools:ignore="LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/editTextBackground3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_edit_text_background"
                android:src="@drawable/shape_login_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/mainEditColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/editTextBackground3"
                app:layout_constraintEnd_toEndOf="@+id/editTextBackground3"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="@+id/editTextBackground3"
                app:layout_constraintTop_toTopOf="@+id/editTextBackground3"
                tools:ignore="LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_up_question"
            android:textColor="@color/black"
            android:layout_marginTop="22dp"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_gravity="center_horizontal"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_sign_button"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />


    </LinearLayout>

</layout>
